# delicious_bookmarks

./: .coveragerc  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  analyze_delicious.py  bandit.yaml  docker-compose.yml  index.rst  links_schema.sql  logging.conf  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  schema.py  setup.py  sonar-project.properties  test_analyze_delicious.py  tox.ini
.github/workflows/: codeql-analysis.yml  node.js.yml  pythonapp.yml
backend/: Dockerfile  main.py  pyproject.toml  ruff.toml
backend/src/: report.html  report.json
backend/src/app/: crud.py  database.py  main.py  models.py  report.html  report.json  schemas.py  tag.py
backend/src/tests/: locust.conf  locustfile.py  report.html  report.json  test_main.py
datasets/: delicious_links_private.html
docs/: conf.py
frontend-app/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend-app/public/: index.html  output.css
frontend-app/src/: App.js  App.jsx  App.test.js  App.test.jsx  output.css
frontend-app/src/components/: AppFooter.js  AppFooter.jsx  AppFooter.test.js  AppFooter.test.jsx  AppHeader.js  AppHeader.jsx  AppHeader.test.js  AppHeader.test.jsx  Bookmark.js  Bookmark.jsx  Bookmark.test.js  Bookmark.test.jsx  BookmarkDate.js  BookmarkDate.jsx  Link.js  (+6 more)
services/web/: Dockerfile  manage.py
templates/: base.html  template.html
tests/: test_analyze_delicious.py  test_gen.py  test_rest_api.py  test_web_app.py
web/: app.py  database.py  main.py  models.py  schema.py
(+1 files in other folders)
