[tool.poetry]
name = "delicious-bookmarks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.25.0"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
flake8 = "^7.0.0"
bandit = "^1.7.6"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
pytest-html = "^4.1.1"
pytest-reportlog = "^0.4.0"
httpx = "^0.26.0"
lxml = "^5.1.0"


[tool.poetry.group.dev.dependencies]
hypothesis = "^6.98.8"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
